fixed console errors

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<title>JAMES KO PORTFOLIO</title>
 
 	<!--common style-->
-	<link href='http://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200'
+	<link href='https://fonts.googleapis.com/css?family=Abel|Source+Sans+Pro:400,300,300italic,400italic,600,600italic,700,700italic,900,900italic,200italic,200'
 	    rel='stylesheet' type='text/css'>
 
 	<!-- inject:css -->
@@ -179,7 +179,6 @@
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/jquery.png" alt="Clients">
-									</a>
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/bootstrap.png" alt="Clients">
@@ -204,10 +203,7 @@
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/visualcode.png" alt="Clients">
-
 								</li>
-
-
 							</ul>
 
 						</div>
@@ -345,7 +341,7 @@
 									</li>
 									<li>
 										<a href="assets/img/print/t_g/stamps.jpg" title="Brand Stamps">
-											<img src="assets/img/print/t_g/stampsjpg" alt="">
+											<img src="assets/img/print/t_g/stamps.jpg" alt="">
 										</a>
 									</li>
 									<li>
