updated about me

--- a/index.html
+++ b/index.html
@@ -124,15 +124,12 @@
 									<h4 class="text-uppercase">
 										ABOUT James
 									</h4>
-
 									<p>
-										i am awwweeeesome.
+										James grew up in Orange County, Ca and moved to NYC, the mecca of art, design and fashion, to pursue a career in creative advertising. After numerous years of working in the field, he realized the challenges of life had left him wanting more. He then packed up his belongings, quit his job and came back home to California to start a new adventure in web development. He's found a new passion in tech and the infinite amount of knowledge it has to offer. He is most fascinated by the amount of creativity and efficiency in tech industry. James still loves to sketch and visit galleries on his free time.
 									</p>
-
 									<p>
-										sooo awwwweeesome.
+										James has a dog named Autumn (Yorkshire Terrier) and she is adorable.
 									</p>
-
 								</div>
 							</div>
 						</div>
@@ -304,8 +301,9 @@
 								Pet Vet
 							</h4>
 							<p>
-								<a href="https://www.petvet.tech" target="_blank">Live</a> //
-								<a href="#" target="_blank">Github</a>
+								<!-- <a href="https://www.petvet.tech" target="_blank">Live</a> //
+								<a href="#" target="_blank">Github</a> -->
+								COMING SOON...
 							</p>
 						</div>
 					</div>
@@ -474,8 +472,9 @@
 								<a href="portfolio-single.html">Taco 'Bout It</a>
 							</h4>
 							<p>
-								<a href="#">Live</a> //
-								<a href="#">Github</a>								
+								<!-- <a href="#">Live</a> //
+								<a href="#">Github</a> -->
+								COMING SOON...
 							</p>
 						</div>
 					</div>
@@ -559,8 +558,10 @@
 				<div class="container">
 					<div class="row">
 						<div class="heading-title-alt text-center m-bot-0 inline-block">
-							<h1 class="text-uppercase light-txt">"Sucking at something is the first step to <br>being sorta good at something."</h1>
-							<span class="heading-sub-title text-uppercase theme-color">Jake the Dog</span>
+							<h1 class="text-uppercase light-txt">"There will come a time when you believe everything is finished. Yet that will be the beginning."
+							</h1>
+							<span class="heading-sub-title text-uppercase theme-color">Louis L'Amour
+							</span>
 
 						</div>
 
