added print description

--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
 										ABOUT James
 									</h4>
 									<p>
-										James grew up in Orange County, Ca and moved to NYC, the mecca of art, design and fashion, to pursue a career in creative advertising. After numerous years of working in the field, he realized the challenges of life had left him wanting more. He then packed up his belongings, quit his job and came back home to California to start a new adventure in web development. He's found a new passion in tech and the infinite amount of knowledge it has to offer. He is most fascinated by the amount of creativity and efficiency in tech industry. James still loves to sketch and visit galleries on his free time.
+										James grew up in Orange County, Ca and moved to NYC, the mecca of art, design and fashion, to pursue a career in creative
+										advertising. After numerous years of working in the field, he realized the challenges of life had left him wanting
+										more. He then packed up his belongings, quit his job and came back home to California to start a new adventure
+										in web development. He's found a new passion in tech and the infinite amount of knowledge it has to offer. He is
+										most fascinated by the amount of creativity and efficiency in tech industry. James still loves to sketch and visit
+										galleries on his free time.
 									</p>
 									<p>
 										James has a dog named Autumn (Yorkshire Terrier) and she is adorable.
@@ -361,6 +366,8 @@
 							<h4>
 								Top Gun Fashion
 							</h4>
+							<p>Photoshop, Illustrator</p>
+
 						</div>
 					</div>
 
@@ -451,6 +458,7 @@
 							<h4>
 								Advertising
 							</h4>
+							<p>Photoshop, Illustrator</p>
 
 						</div>
 					</div>
@@ -544,7 +552,7 @@
 							<h4>
 								William Sonoma
 							</h4>
-
+							<p>Photoshop, Illustrator, Indesign</p>
 						</div>
 					</div>
 
