fixed some links and texts

--- a/index.html
+++ b/index.html
@@ -71,11 +71,25 @@
 							<li>
 								<a href="#james_projects">Projects</a>
 							</li>
-							<li>
+							<li style="margin-right: 45px;">
 								<a href="#contact_me">Contact Me</a>
 							</li>
 							<li>
-								<a href="assets/jamesko_resume.pdf">Resume</a>
+								<a href="assets/JamesKo_Resume.pdf">Resume
+									<i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://www.linkedin.com/in/jamesjayko">
+									LinkedIn
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://github.com/jamesjayko/">
+									Github
+									<i class="fa fa-github"></i>
+								</a>
 							</li>
 						</ul>
 						<!--mega menu end-->
@@ -112,7 +126,7 @@
 								<div class="post-slider post-img text-center">
 									<ul>
 										<div>
-											<a title="Freshness Photo">
+											<a title='James "Jay" Ko'>
 												<img class="jamesko_portrait" src="assets/img/jamesko_bw_port.jpg" alt="">
 											</a>
 										</div>
@@ -295,7 +309,7 @@
 							<img src="assets/img/print/petvet_sm.jpg" alt="">
 							<div class="portfolio-hover">
 								<div class="action-btn">
-									<a href="https://www.petvet.tech" target="_blank">
+									<a href="https://www.petvet.tech">
 										<i class="icon-basic_link"></i>
 									</a>
 								</div>
@@ -306,8 +320,8 @@
 								Pet Vet
 							</h4>
 							<p>
-								<!-- <a href="https://www.petvet.tech" target="_blank">Live</a> //
-								<a href="#" target="_blank">Github</a> -->
+								<!-- <a href="https://www.petvet.tech" >Live</a> //
+								<a href="#" >Github</a> -->
 								COMING SOON...
 							</p>
 						</div>
@@ -378,7 +392,7 @@
 							<img src="assets/img/print/mm_sm.jpg" alt="">
 							<div class="portfolio-hover">
 								<div class="action-btn">
-									<a href="https://www.codejko.tech/memory_match" target="_blank">
+									<a href="https://www.codejko.tech/memory_match">
 										<i class="icon-basic_link"></i>
 									</a>
 								</div>
@@ -389,8 +403,8 @@
 								Civilization V Memory Match
 							</h4>
 							<p>
-								<a href="https://www.codejko.tech/memory_match" target="_blank">Live</a> //
-								<a href="https://github.com/jamesjayko/final_memory_match" target="_blank">Github</a>
+								<a href="https://www.codejko.tech/memory_match">Live</a> //
+								<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
 							</p>
 						</div>
 					</div>
@@ -477,7 +491,7 @@
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								<a href="portfolio-single.html">Taco 'Bout It</a>
+								<a href="#">Taco 'Bout It</a>
 							</h4>
 							<p>
 								<!-- <a href="#">Live</a> //
@@ -665,21 +679,12 @@
 					<img class="retina" src="assets/img/jamesko_logo_sm.png" />
 				</a>
 				<div class="social-link circle m-top-50 m-bot-50">
-					<a href="#">
-						<i class="fa fa-facebook"></i>
+					<a href="https://www.linkedin.com/in/jamesjayko">
+						<i class="fa fa-linkedin"></i>
 					</a>
-					<a href="#">
-						<i class="fa fa-twitter"></i>
+					<a href="https://github.com/jamesjayko/">
+						<i class="fa fa-github"></i>
 					</a>
-					<!-- <a href="#">
-						<i class="fa fa-dribbble"></i>
-					</a>
-					<a href="#">
-						<i class="fa fa-google-plus"></i>
-					</a>
-					<a href="#">
-						<i class="fa fa-behance"></i>
-					</a> -->
 				</div>
 				<div class="copyright-sub-title text-uppercase border-top">
 					&copy; Copyright 2018 - JAMES KO. All right reserved
