--- a/index.html
+++ b/index.html
@@ -302,7 +302,24 @@
 					</ul>
 				</div>
 
-				<div class="portfolio portfolio-with-title col-3">
+				<div class="portfolio col-3">
+
+						<div class="portfolio-item cat2 cat4">
+								<div class="thumb">
+									<img src="assets/img/portfolio/02.jpg" alt="">
+									<div class="portfolio-hover">
+										<div class="action-btn">
+											<a href="portfolio-single.html"> <i class="icon-basic_link"></i> 
+											</a>
+										</div>
+										<div class="portfolio-description">
+											<h4><a href="portfolio-single.html">External link</a></h4>
+											<p><a href="#">category 1</a> , <a href="#">category 2</a> 
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
