test without action-btn

--- a/index.html
+++ b/index.html
@@ -308,16 +308,18 @@
 						<div class="thumb">
 							<img src="assets/img/print/petvet_sm.jpg" alt="">
 							<div class="portfolio-hover">
-								<div class="action-btn">
+								<!-- <div class="action-btn"> -->
 									<!-- <a href="https://www.petvet.tech">
 										<i class="icon-basic_link"></i>
 									</a> -->
-									<h4>
+									<!-- <h4>
 											<a href="https://www.petvet.tech">PET VET</a>
-										</h4>
-								</div>
+										</h4> -->
+								<!-- </div> -->
 								<div class="portfolio-description">
-									
+										<a href="https://www.petvet.tech">
+											<i class="icon-basic_link"></i>
+										</a> 
 									<p>
 										<a href="https://www.petvet.tech">Live</a> //
 										<a href="#">Github</a>
