--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
-							<img src="assets/img/print/petvet_sm.jpg" alt="">
-							<div class="portfolio-hover">
+							<img class="thumbImg" src="assets/img/print/petvet_sm.jpg" alt="">
+							<div class="portfolio_hover_jay">
 								<!-- <div class="action-btn"> -->
 									<!-- <a href="https://www.petvet.tech">
 										<i class="icon-basic_link"></i>
