--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
-							<img class="thumbImg" src="assets/img/print/petvet_sm.jpg" alt="">
+							<img class="thumbImg_jay" src="assets/img/print/petvet_sm.jpg" alt="">
 							<div class="portfolio_hover_jay">
 								<!-- <div class="action-btn"> -->
 									<!-- <a href="https://www.petvet.tech">
