--- a/index.html
+++ b/index.html
@@ -306,23 +306,15 @@
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
-							<img class="thumbImg_jay" src="assets/img/print/petvet_sm.jpg" alt="">
+							<img src="assets/img/print/petvet_sm.jpg" alt="">
 							<div class="portfolio_hover_jay">
-								<!-- <div class="action-btn"> -->
-									<!-- <a href="https://www.petvet.tech">
-										<i class="icon-basic_link"></i>
-									</a> -->
-									<!-- <h4>
-											<a href="https://www.petvet.tech">PET VET</a>
-										</h4> -->
-								<!-- </div> -->
 								<div class="portfolio-description">
-										<a href="https://www.petvet.tech">
-											<i class="icon-basic_link"></i>
-										</a> 
+									<a href="https://www.petvet.tech">
+										<i class="icon-basic_link"></i>
+									</a>
 									<p>
 										<a href="https://www.petvet.tech">Live</a> //
-										<a href="#">Github</a>
+										<a href="https://www.codejko.tech/petvet/">Github</a>
 									</p>
 								</div>
 							</div>
@@ -396,44 +388,17 @@
 					</div>
 
 					<div class="portfolio-item cat1">
-							<div class="thumb">
-								<img src="assets/img/print/mm_sm.jpg" alt="">
-								<div class="portfolio-hover">
-									<div class="action-btn">
-										<!-- <a href="https://www.petvet.tech">
-											<i class="icon-basic_link"></i>
-										</a> -->
-										<h4>
-												<a href="https://www.codejko.tech/memory_match">MEMORY MATCH</a>
-											</h4>
-									</div>
-									<div class="portfolio-description">
-										
-										<p>
-											<a href="https://www.codejko.tech/memory_match">Live</a> //
-											<a href="#">Github</a>
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="portfolio-title">
-								<h4>
-								Civilization V Memory Match								
-								</h4>
-								<p>
-									HTML, CSS, JQuery, Javascript, MVC 
-								</p>
-							</div>
-						</div>
-
-					<!-- <div class="portfolio-item cat1">
 						<div class="thumb">
 							<img src="assets/img/print/mm_sm.jpg" alt="">
-							<div class="portfolio-hover">
-								<div class="action-btn">
-									<a href="https://www.codejko.tech/memory_match">
+							<div class="portfolio_hover_jay">
+								<div class="portfolio-description">
+									<a href="https://www.codejko.tech/memory_match/">
 										<i class="icon-basic_link"></i>
 									</a>
+									<p>
+										<a href="https://www.codejko.tech/memory_match/">Live</a> //
+										<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
+									</p>
 								</div>
 							</div>
 						</div>
@@ -442,11 +407,10 @@
 								Civilization V Memory Match
 							</h4>
 							<p>
-								<a href="https://www.codejko.tech/memory_match">Live</a> //
-								<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
+								HTML, CSS, JQuery, Javascript, Bootstrap, MVC
 							</p>
 						</div>
-					</div> -->
+					</div>
 
 					<div class="portfolio-item cat2">
 						<div class="thumb">
@@ -516,61 +480,33 @@
 						</div>
 					</div>
 
-<div class="portfolio-item cat1">
-							<div class="thumb">
-								<img src="assets/img/print/taco_sm.jpg" alt="">
-								<div class="portfolio-hover">
-									<div class="action-btn">
-										<!-- <a href="https://www.petvet.tech">
-											<i class="icon-basic_link"></i>
-										</a> -->
-										<h4>
-												<a href="https://www.codejko.tech/tacoboutit">TACO 'BOUT IT</a>
-											</h4>
-									</div>
-									<div class="portfolio-description">
-										
-										<p>
-											<a href="https://www.codejko.tech/tacoboutit">Live</a> //
-											<a href="#">Github</a>
-										</p>
-									</div>
-								</div>
-							</div>
-							<div class="portfolio-title">
-								<h4>
-								Taco 'Bout It						
-								</h4>
-								<p>
-									HTML, CSS, Javascript, AJAX, MVC
-								</p>
-							</div>
-						</div>
-
-					<!-- <div class="portfolio-item cat1">
+					<div class="portfolio-item cat1">
 						<div class="thumb">
 							<img src="assets/img/print/taco_sm.jpg" alt="">
-							<div class="portfolio-hover">
-								<div class="action-btn">
-									<a href="portfolio-single.html">
+							<div class="portfolio_hover_jay">
+								<div class="portfolio-description">
+									<a href="https://www.codejko.tech/tacoboutit/">
 										<i class="icon-basic_link"></i>
 									</a>
+									<p>
+										<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
+										<a href="https://github.com/jamesjayko/tacoboutit">Github</a>
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								<a href="#">Taco 'Bout It</a>
+								Taco 'Bout It
 							</h4>
 							<p>
-								COMING SOON...
+								HTML, CSS, Javascript, Jquery, AJAX, MVC
 							</p>
 						</div>
-					</div> -->
+					</div>
 
 					<div class="portfolio-item cat2">
 						<div class="thumb">
-
 							<div class="portfolio-slider-alt">
 								<ul class="slides">
 									<li>
