fixed target on header and some margin issue

--- a/index.html
+++ b/index.html
@@ -64,16 +64,16 @@
 						<!--mega menu start-->
 						<ul class="menuzord-menu menuzord-right c-nav_s-standard">
 							<li>
-								<a href="#about_james">About James</a>
+								<a target="_self" href="#about_james">About James</a>
 							</li>
 							<li>
-								<a href="#skills">Skills</a>
+								<a target="_self" href="#skills">Skills</a>
 							</li>
 							<li>
-								<a href="#james_projects">Projects</a>
+								<a target="_self" href="#james_projects">Projects</a>
 							</li>
 							<li style="margin-right: 45px;">
-								<a href="#contact_me">Contact Me</a>
+								<a target="_self" href="#contact_me">Contact Me</a>
 							</li>
 							<li>
 								<a href="assets/JamesKo_Resume.pdf">Resume
@@ -606,10 +606,10 @@
 							<div class="row">
 								<div class="col-md-8">
 
-									<h4 class="text-uppercase">Contact Me</h4>
-									<p>Feel free to reach out!</p>
+									<h4 class="text-uppercase">Contact James</h4>
+									<!-- <p>Feel free to reach out!</p> -->
 
-									<form class="contact-comments m-top-50 js-Mailer" method="post">
+									<form class="contact-comments js-Mailer" method="post">
 										<div class="row">
 
 											<div class="col-md-6 form-group">
