reverted back to slider from external links

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 								<a target="_self" href="#skills">Skills</a>
 							</li>
 							<li>
-								<a target="_self" href="#james_projects">Projects</a>
+								<a target="_self" href="#projects">Projects</a>
 							</li>
 							<li style="margin-right: 45px;">
-								<a target="_self" href="#contact_me">Contact Me</a>
+								<a target="_self" href="#contact_james">Contact Me</a>
 							</li>
 							<li>
 								<a href="assets/JamesKo_Resume.pdf">Resume
@@ -285,7 +285,7 @@
 			<!--fun factor-->
 
 			<!--body content start-->
-			<section id="james_projects" class="body-content page-content">
+			<section id="projects" class="body-content page-content">
 				<div class="heading-title-alt border-short-bottom text-center">
 					<h3 class="text-uppercase">Projects</h3>
 				</div>
@@ -303,8 +303,8 @@
 					</ul>
 				</div>
 				<div class="portfolio portfolio-with-title col-3">
-
-					<div class="portfolio-item cat1">
+					<!-- actual portfolio content start here -->
+					<!-- <div class="portfolio-item cat1">
 						<div class="thumb">
 							<img src="assets/img/print/petvet_sm.jpg" alt="">
 							<div class="portfolio_hover_jay">
@@ -315,6 +315,54 @@
 									<p>
 										<a href="https://www.petvet.tech">Live</a> //
 										<a href="https://www.codejko.tech/petvet/">Github</a>
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="portfolio-title">
+							<h4>
+								Pet Vet
+							</h4>
+							<p>
+								CSS, JSX, React, Redux, Axios, PHP, MySQL
+							</p>
+						</div>
+					</div> -->
+
+					<div class="portfolio-item cat1">
+						<div class="thumb">
+							<div class="portfolio-slider">
+								<ul class="slides">
+									<li>
+										<a href="assets/img/print/t_g/tg1.jpg" title="Top Gun - Homepage">
+											<img src="assets/img/print/petvet_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/t_g/tg2.jpg" title="Top Gun - 404">
+											<img src="assets/img/print/t_g/tg2_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/t_g/tg3.jpg" title="Top Gun - Gallery">
+											<img src="assets/img/print/t_g/tg3_sm.jpg" alt="">
+										</a>
+									</li>
+								</ul>
+							</div>
+							<div class="portfolio-hover">
+								<div class="action-btn">
+									<a href="#">
+										<i class="icon-basic_magnifier"></i>
+									</a>
+								</div>
+								<div class="portfolio-description">
+									<h4>
+										<a href="#">Pet Vet</a>
+									</h4>
+									<p>
+										<a href="https://www.petvet.tech">Live</a> //
+										<a href="https://github.com/jamesjayko/petvet">Github</a>
 									</p>
 								</div>
 							</div>
@@ -375,6 +423,11 @@
 									<a href="#">
 										<i class="icon-basic_magnifier"></i>
 									</a>
+									<div class="portfolio-description">
+											<h4>
+												<a href="#">Top Gun Fashion</a>
+											</h4>
+											</div>
 								</div>
 							</div>
 						</div>
@@ -388,29 +441,52 @@
 					</div>
 
 					<div class="portfolio-item cat1">
-						<div class="thumb">
-							<img src="assets/img/print/mm_sm.jpg" alt="">
-							<div class="portfolio_hover_jay">
-								<div class="portfolio-description">
-									<a href="https://www.codejko.tech/memory_match/">
-										<i class="icon-basic_link"></i>
-									</a>
-									<p>
-										<a href="https://www.codejko.tech/memory_match/">Live</a> //
-										<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
-									</p>
+							<div class="thumb">
+								<div class="portfolio-slider">
+									<ul class="slides">
+										<li>
+											<a href="assets/img/print/t_g/tg1.jpg" title="Top Gun - Homepage">
+												<img src="assets/img/print/mm_sm.jpg" alt="">
+											</a>
+										</li>
+										<li>
+											<a href="assets/img/print/t_g/tg2.jpg" title="Top Gun - 404">
+												<img src="assets/img/print/t_g/tg2_sm.jpg" alt="">
+											</a>
+										</li>
+										<li>
+											<a href="assets/img/print/t_g/tg3.jpg" title="Top Gun - Gallery">
+												<img src="assets/img/print/t_g/tg3_sm.jpg" alt="">
+											</a>
+										</li>
+									</ul>
+								</div>
+								<div class="portfolio-hover">
+									<div class="action-btn">
+										<a href="#">
+											<i class="icon-basic_magnifier"></i>
+										</a>
+									</div>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">Pet Vet</a>
+										</h4>
+										<p>
+											<a href="https://www.codejko.tech/memory_match/">Live</a> //
+											<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
+										</p>
+									</div>
 								</div>
 							</div>
+							<div class="portfolio-title">
+									<h4>
+										Civilization V Memory Match
+									</h4>
+									<p>
+										HTML, CSS, JQuery, Javascript, Bootstrap, MVC
+									</p>
+								</div>
 						</div>
-						<div class="portfolio-title">
-							<h4>
-								Civilization V Memory Match
-							</h4>
-							<p>
-								HTML, CSS, JQuery, Javascript, Bootstrap, MVC
-							</p>
-						</div>
-					</div>
 
 					<div class="portfolio-item cat2">
 						<div class="thumb">
@@ -600,7 +676,7 @@
 
 				<!--body content start-->
 				<section class="body-content">
-					<div class="page-content" id="contact_me">
+					<div class="page-content" id="contact_james">
 
 						<div class="container">
 							<div class="row">
