added new images for the slider

--- a/index.html
+++ b/index.html
@@ -334,42 +334,51 @@
 							<div class="portfolio-slider">
 								<ul class="slides">
 									<li>
-										<a href="assets/img/print/t_g/tg1.jpg" title="Top Gun - Homepage">
-											<img src="assets/img/print/petvet_sm.jpg" alt="">
+										<a href="assets/img/print/petvet/petvet_01.jpg" title="Pet Vet - Homepage">
+											<img src="assets/img/print/petvet/petvet_01_sm.jpg" alt="">
 										</a>
 									</li>
 									<li>
-										<a href="assets/img/print/t_g/tg2.jpg" title="Top Gun - 404">
-											<img src="assets/img/print/t_g/tg2_sm.jpg" alt="">
+										<a href="assets/img/print/petvet/petvet_02.jpg" title="Pet Vet - Pet List">
+											<img src="assets/img/print/petvet/petvet_02_sm.jpg" alt="">
 										</a>
 									</li>
 									<li>
-										<a href="assets/img/print/t_g/tg3.jpg" title="Top Gun - Gallery">
-											<img src="assets/img/print/t_g/tg3_sm.jpg" alt="">
+										<a href="assets/img/print/petvet/petvet_03.jpg" title="Pet Vet - Pet Profile">
+											<img src="assets/img/print/petvet/petvet_03_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/petvet/petvet_04.jpg" title="Pet Vet - Edit Modal">
+											<img src="assets/img/print/petvet/petvet_04_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/petvet/petvet_05.jpg" title="Pet Vet - Contact Us">
+											<img src="assets/img/print/petvet/petvet_05_sm.jpg" alt="">
 										</a>
 									</li>
 								</ul>
 							</div>
 							<div class="portfolio-hover">
 								<div class="action-btn">
+
 									<a href="#">
 										<i class="icon-basic_magnifier"></i>
 									</a>
-								</div>
-								<div class="portfolio-description">
-									<h4>
-										<a href="#">Pet Vet</a>
-									</h4>
-									<p>
-										<a href="https://www.petvet.tech">Live</a> //
-										<a href="https://github.com/jamesjayko/petvet">Github</a>
-									</p>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">Pet Vet</a>
+										</h4>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								Pet Vet
+								Pet Vet --
+								<a href="https://www.petvet.tech">Live</a> //
+								<a href="https://github.com/jamesjayko/petvet">Github</a>
 							</h4>
 							<p>
 								CSS, JSX, React, Redux, Axios, PHP, MySQL
@@ -424,10 +433,10 @@
 										<i class="icon-basic_magnifier"></i>
 									</a>
 									<div class="portfolio-description">
-											<h4>
-												<a href="#">Top Gun Fashion</a>
-											</h4>
-											</div>
+										<h4>
+											<a href="#">Top Gun Fashion</a>
+										</h4>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -441,56 +450,62 @@
 					</div>
 
 					<div class="portfolio-item cat1">
-							<div class="thumb">
-								<div class="portfolio-slider">
-									<ul class="slides">
-										<li>
-											<a href="assets/img/print/t_g/tg1.jpg" title="Top Gun - Homepage">
-												<img src="assets/img/print/mm_sm.jpg" alt="">
-											</a>
-										</li>
-										<li>
-											<a href="assets/img/print/t_g/tg2.jpg" title="Top Gun - 404">
-												<img src="assets/img/print/t_g/tg2_sm.jpg" alt="">
-											</a>
-										</li>
-										<li>
-											<a href="assets/img/print/t_g/tg3.jpg" title="Top Gun - Gallery">
-												<img src="assets/img/print/t_g/tg3_sm.jpg" alt="">
-											</a>
-										</li>
-									</ul>
-								</div>
-								<div class="portfolio-hover">
-									<div class="action-btn">
-										<a href="#">
-											<i class="icon-basic_magnifier"></i>
+						<div class="thumb">
+							<div class="portfolio-slider">
+								<ul class="slides">
+									<li>
+										<a href="assets/img/print/mm/mm_01.jpg" title="Civ V - Ancient Stage">
+											<img src="assets/img/print/mm/mm_01_sm.jpg" alt="">
 										</a>
-									</div>
+									</li>
+									<li>
+										<a href="assets/img/print/mm/mm_02.jpg" title="Civ V - Modal">
+											<img src="assets/img/print/mm/mm_02_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/mm/mm_03.jpg" title="Civ V - Renaissance Stage">
+											<img src="assets/img/print/mm/mm_03_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/mm/mm_04.jpg" title="Civ V - Modern Stage">
+											<img src="assets/img/print/mm/mm_04_sm.jpg" alt="">
+										</a>
+									</li>
+
+								</ul>
+							</div>
+
+							<div class="portfolio-hover">
+								<div class="action-btn">
+									<a href="#">
+										<i class="icon-basic_magnifier"></i>
+									</a>
 									<div class="portfolio-description">
 										<h4>
-											<a href="#">Pet Vet</a>
+											<a href="#">Civ V Memory Match</a>
 										</h4>
-										<p>
-											<a href="https://www.codejko.tech/memory_match/">Live</a> //
-											<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
-										</p>
 									</div>
 								</div>
 							</div>
-							<div class="portfolio-title">
-									<h4>
-										Civilization V Memory Match
-									</h4>
-									<p>
-										HTML, CSS, JQuery, Javascript, Bootstrap, MVC
-									</p>
-								</div>
+
 						</div>
+						<div class="portfolio-title">
+							<h4>
+								Civ V Memory Match --
+								<a href="https://www.codejko.tech/memory_match/">Live</a> //
+								<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
+							</h4>
+							<p>
+								HTML, CSS, JQuery, Javascript, Bootstrap, MVC
+							</p>
+						</div>
+					</div>
 
 					<div class="portfolio-item cat2">
 						<div class="thumb">
-							<div class="portfolio-slider">
+							<div class="portfolio-slider-alt">
 								<ul class="slides">
 									<li>
 										<a href="assets/img/print/ad/cialis/better.jpg" title="Cialis - Better">
@@ -544,6 +559,11 @@
 									<a href="#">
 										<i class="icon-basic_magnifier"></i>
 									</a>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">Advertising</a>
+										</h4>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -558,22 +578,56 @@
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
-							<img src="assets/img/print/taco_sm.jpg" alt="">
-							<div class="portfolio_hover_jay">
-								<div class="portfolio-description">
-									<a href="https://www.codejko.tech/tacoboutit/">
-										<i class="icon-basic_link"></i>
+							<div class="portfolio-slider">
+								<ul class="slides">
+									<li>
+										<a href="assets/img/print/taco/taco_01.jpg" title="Taco 'Bout It - Homepage">
+											<img src="assets/img/print/taco/taco_01_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/taco/taco_04.jpg" title="Taco 'Bout It - Find Some Loading">
+											<img src="assets/img/print/taco/taco_04_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/taco/taco_02.jpg" title="Taco 'Bout It - Find Some">
+											<img src="assets/img/print/taco/taco_02_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/taco/taco_05.jpg" title="Taco 'Bout It - Find Some List">
+											<img src="assets/img/print/taco/taco_05_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/taco/taco_03.jpg" title="Taco 'Bout It - Make Some">
+											<img src="assets/img/print/taco/taco_03_sm.jpg" alt="">
+										</a>
+									</li>
+
+
+								</ul>
+							</div>
+
+							<div class="portfolio-hover">
+								<div class="action-btn">
+									<a href="#">
+										<i class="icon-basic_magnifier"></i>
 									</a>
-									<p>
-										<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
-										<a href="https://github.com/jamesjayko/tacoboutit">Github</a>
-									</p>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">Taco 'Bout It</a>
+										</h4>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								Taco 'Bout It
+								Taco 'Bout It --
+								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
+								<a href="https://github.com/jamesjayko/tacoboutit">Github</a>
 							</h4>
 							<p>
 								HTML, CSS, Javascript, Jquery, AJAX, MVC
@@ -638,6 +692,11 @@
 									<a href="#">
 										<i class="icon-basic_magnifier"></i>
 									</a>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">William Sonoma</a>
+										</h4>
+									</div>
 								</div>
 							</div>
 						</div>
