--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 							<h4>
 								Pet Vet --
 								<a href="https://www.petvet.tech">Live</a> //
-								<a href="https://github.com/jamesjayko/petvet">Github</a>
+								<a href="https://github.com/jamesjayko/petvet">Github</a> --
 							</h4>
 							<p>
 								CSS, JSX, React, Redux, Axios, PHP, MySQL
@@ -495,7 +495,7 @@
 							<h4>
 								Civ V Memory Match --
 								<a href="https://www.codejko.tech/memory_match/">Live</a> //
-								<a href="https://github.com/jamesjayko/final_memory_match">Github</a>
+								<a href="https://github.com/jamesjayko/final_memory_match">Github</a> --
 							</h4>
 							<p>
 								HTML, CSS, JQuery, Javascript, Bootstrap, MVC
@@ -627,7 +627,7 @@
 							<h4>
 								Taco 'Bout It --
 								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
-								<a href="https://github.com/jamesjayko/tacoboutit">Github</a>
+								<a href="https://github.com/jamesjayko/tacoboutit">Github</a> --
 							</h4>
 							<p>
 								HTML, CSS, Javascript, Jquery, AJAX, MVC
