added clear form after mail sent

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 							<h4>
 								Taco 'Bout It --
 								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
-								<a href="https://github.com/jamesjayko/tacoboutit">Github</a> --
+								<a href="https://github.com/jamesjayko/C10.17Hackathon">Github</a> --
 							</h4>
 							<p>
 								HTML, CSS, Javascript, Jquery, AJAX, MVC
@@ -707,9 +707,7 @@
 							<p>Photoshop, Illustrator, Indesign</p>
 						</div>
 					</div>
-
 				</div>
-
 			</section>
 			<!--body content end-->
 
