--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 							<h4>
 								Taco 'Bout It --
 								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
-								<a href="https://github.com/jamesjayko/C10.17Hackathon">Github</a> --
+								<a href="https://github.com/jamesjayko/tacoboutit.git">Github</a> --
 							</h4>
 							<p>
 								HTML, CSS, Javascript, Jquery, AJAX, MVC
