img optimize, added padding to p, reorganize skills

--- a/index.html
+++ b/index.html
@@ -163,10 +163,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<ul class="clients plus-box grid-6">
-								<li>
 
-									<img src="assets/img/dev_icons/aws.png" alt="Clients">
-								</li>
 								<li>
 									<img src="assets/img/dev_icons/photoshop.png" alt="Clients">
 								</li>
@@ -177,22 +174,13 @@
 									<img src="assets/img/dev_icons/indesign.png" alt="Clients">
 								</li>
 								<li>
-
-									<img src="assets/img/dev_icons/git.png" alt="Clients">
-								</li>
-								<li>
-									<img src="assets/img/dev_icons/github.png" alt="Clients">
-								</li>
-
-								<li>
-									<img src="assets/img/dev_icons/javascript.png" alt="Clients">
-								</li>
-
-								<li>
 									<img src="assets/img/dev_icons/html.png" alt="Clients">
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/css.png" alt="Clients">
+								</li>
+								<li>
+									<img src="assets/img/dev_icons/javascript.png" alt="Clients">
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/jquery.png" alt="Clients">
@@ -201,16 +189,22 @@
 									<img src="assets/img/dev_icons/bootstrap.png" alt="Clients">
 								</li>
 								<li>
+									<img src="assets/img/dev_icons/sass.png" alt="Clients">
+								</li>
+								<li>
 									<img src="assets/img/dev_icons/chromedevtools.png" alt="Clients">
+								</li>
+								<li>
+									<img src="assets/img/dev_icons/git.png" alt="Clients">
+								</li>
+								<li>
+									<img src="assets/img/dev_icons/github.png" alt="Clients">
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/meistertask.png" alt="Clients">
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/slack.png" alt="Clients">
-								</li>
-								<li>
-									<img src="assets/img/dev_icons/sass.png" alt="Clients">
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/react.png" alt="Clients">
@@ -220,6 +214,9 @@
 								</li>
 								<li>
 									<img src="assets/img/dev_icons/visualcode.png" alt="Clients">
+								</li>
+								<li>
+									<img src="assets/img/dev_icons/aws.png" alt="Clients">
 								</li>
 							</ul>
 
@@ -376,9 +373,11 @@
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								Pet Vet --
+								Pet Vet
+								<br> --
 								<a href="https://www.petvet.tech">Live</a> //
-								<a href="https://github.com/jamesjayko/petvet">Github</a> --
+								<a href="https://github.com/jamesjayko/petvet">Github</a>
+								--
 							</h4>
 							<p>
 								CSS, JSX, React, Redux, Axios, PHP, MySQL
@@ -412,17 +411,17 @@
 									</li>
 									<li>
 										<a href="assets/img/print/t_g/patterns.jpg" title="Brand Patterns">
-											<img src="assets/img/print/t_g/patterns.jpg" alt="">
+											<img src="assets/img/print/t_g/patterns_sm.jpg" alt="">
 										</a>
 									</li>
 									<li>
 										<a href="assets/img/print/t_g/stamps.jpg" title="Brand Stamps">
-											<img src="assets/img/print/t_g/stamps.jpg" alt="">
+											<img src="assets/img/print/t_g/stamps_sm.jpg" alt="">
 										</a>
 									</li>
 									<li>
 										<a href="assets/img/print/t_g/joker_tags.jpg" title="Joker Tags">
-											<img src="assets/img/print/t_g/joker_tags.jpg" alt="">
+											<img src="assets/img/print/t_g/joker_tags_sm.jpg" alt="">
 										</a>
 									</li>
 								</ul>
@@ -493,7 +492,8 @@
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								Civ V Memory Match --
+								Civ V Memory Match
+								<br> --
 								<a href="https://www.codejko.tech/memory_match/">Live</a> //
 								<a href="https://github.com/jamesjayko/final_memory_match">Github</a> --
 							</h4>
@@ -625,7 +625,8 @@
 						</div>
 						<div class="portfolio-title">
 							<h4>
-								Taco 'Bout It --
+								Taco 'Bout It
+								<br> --
 								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
 								<a href="https://github.com/jamesjayko/tacoboutit.git">Github</a> --
 							</h4>
@@ -666,7 +667,7 @@
 									</li>
 									<li>
 										<a href="assets/img/print/ws/mock_br1.jpg" title="Pottery Barn - Mock Bedroom">
-											<img src="assets/img/print/ws/mock_br1.jpg" alt="">
+											<img src="assets/img/print/ws/mock_br1_sm.jpg" alt="">
 										</a>
 									</li>
 									<li>
@@ -681,7 +682,7 @@
 									</li>
 									<li>
 										<a href="assets/img/print/ws/ws_tags.jpg" title="William Sonoma - Tags">
-											<img src="assets/img/print/ws/ws_tags.jpg" alt="">
+											<img src="assets/img/print/ws/ws_tags_sm.jpg" alt="">
 										</a>
 									</li>
 
