changed live/git links, added skill title

--- a/index.html
+++ b/index.html
@@ -184,7 +184,11 @@
 			<div class="page-content" id="skills">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-12">
+						
+						<div class="col-md-12 text-center">
+								<h4 class="text-uppercase">
+										Skills
+									</h4>
 							<ul class="clients plus-box grid-6">
 
 								<li>
@@ -402,10 +406,9 @@
 						<div class="portfolio-title">
 							<h4>
 								Pet Vet
-								<br> --
+								<br>
 								<a href="https://www.petvet.tech">Live</a> //
 								<a href="https://github.com/jamesjayko/petvet">Github</a>
-								--
 							</h4>
 							<p>
 								CSS, JSX, React, Redux, Axios, PHP, MySQL
@@ -521,9 +524,9 @@
 						<div class="portfolio-title">
 							<h4>
 								Civ V Memory Match
-								<br> --
+								<br>
 								<a href="https://www.codejko.tech/memory_match/">Live</a> //
-								<a href="https://github.com/jamesjayko/final_memory_match">Github</a> --
+								<a href="https://github.com/jamesjayko/final_memory_match">Github</a> 
 							</h4>
 							<p>
 								HTML, CSS, JQuery, Javascript, Bootstrap, MVC
@@ -654,9 +657,9 @@
 						<div class="portfolio-title">
 							<h4>
 								Taco 'Bout It
-								<br> --
+								<br>
 								<a href="https://www.codejko.tech/tacoboutit/">Live</a> //
-								<a href="https://github.com/jamesjayko/tacoboutit.git">Github</a> --
+								<a href="https://github.com/jamesjayko/tacoboutit.git">Github</a>
 							</h4>
 							<p>
 								HTML, CSS, Javascript, Jquery, AJAX, MVC
