--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 							<li>
 								<a href="https://www.linkedin.com/in/jamesjayko">
 
-									<i class="fa fa-linkedin"></i>
+									<i class="fa fa-linkedin" aria-hidden="true"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://github.com/jamesjayko/">
 
-									<i class="fa fa-github"></i>
+									<i class="fa fa-github" aria-hidden="true"></i>
 								</a>
 							</li>
 						</ul>
