--- a/index.html
+++ b/index.html
@@ -739,6 +739,61 @@
 							<p>Photoshop, Illustrator, Indesign</p>
 						</div>
 					</div>
+
+					<div class="portfolio-item cat1">
+						<div class="thumb">
+							<div class="portfolio-slider">
+								<ul class="slides">
+									<li>
+										<a href="assets/img/print/pieshop/pie_01.jpg" title="Pieshop - Landing page">
+											<img src="assets/img/print/pieshop/pie_01_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/pieshop/pie_02.jpg" title="Pieshop - info">
+											<img src="assets/img/print/pieshop/pie_02_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/pieshop/pie_03.jpg" title="Pieshop - Featured pies">
+											<img src="assets/img/print/pieshop/pie_03_sm.jpg" alt="">
+										</a>
+									</li>
+									<li>
+										<a href="assets/img/print/pieshop/pie_04.jpg" title="Pieshop - Order pies">
+											<img src="assets/img/print/pieshop/pie_04_sm.jpg" alt="">
+										</a>
+									</li>
+
+								</ul>
+							</div>
+
+							<div class="portfolio-hover">
+								<div class="action-btn">
+									<a href="#">
+										<i class="icon-basic_magnifier"></i>
+									</a>
+									<div class="portfolio-description">
+										<h4>
+											<a href="#">Pieshop</a>
+										</h4>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="portfolio-title">
+							<h4>
+								Pieshop
+								<br>
+								<a href="https://www.codejko.tech/pieshop/">Live</a> //
+								<a href="https://github.com/jamesjayko/pieshop.git">Github</a>
+							</h4>
+							<p>
+								HTML, CSS, SASS
+							</p>
+						</div>
+					</div>
+
 				</div>
 			</section>
 			<!--body content end-->
