--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<a target="_self" href="#contact_james">Contact Me</a>
 							</li>
 							<li>
-								<a href="assets/JamesKo_Resume.pdf">
+								<a href="assets/James_Ko_Resume.pdf">
 									<i class="fa fa-file-pdf-o" aria-hidden="true"></i>
 								</a>
 							</li>
@@ -152,7 +152,7 @@
 									</p>
 									<ul class="menuzord-menu">
 											<li>
-													<a href="assets/JamesKo_Resume.pdf">
+													<a href="assets/James_Ko_Resume.pdf">
 														<i class="fa fa-file-pdf-o" aria-hidden="true"></i>
 														Resume
 													</a>
