added fuse kawi ax selector

--- a/index.html
+++ b/index.html
@@ -352,12 +352,58 @@
 							</p>
 						</div>
 					</div> -->
+					<div class="portfolio-item cat1">
+							<div class="thumb">
+								<div class="portfolio-slider-alt">
+									<ul class="slides">
+											
+										<li>
+											<a href="assets/img/print/kawi/kawi_01.jpg" title="Ax Selector - Landing">
+												<img src="assets/img/print/kawi/kawi_01_sm.jpg" alt="">
+											</a>
+										</li>
+										<li>
+												<a href="assets/img/print/kawi/kawi_02.jpg" title="Ax Selector - Survey">
+													<img src="assets/img/print/kawi/kawi_02_sm.jpg" alt="">
+												</a>
+											</li>
+											<li>
+													<a href="assets/img/print/kawi/kawi_03.jpg" title="Ax Selector - Send To Dealer">
+														<img src="assets/img/print/kawi/kawi_03_sm.jpg" alt="">
+													</a>
+												</li>
+									</ul>
+								</div>
+								<div class="portfolio-hover">
+									<div class="action-btn">
+	
+										<a href="#">
+											<i class="icon-basic_magnifier"></i>
+										</a>
+										<div class="portfolio-description">
+											<h4>
+												<a href="#">Kawasaki Ax Selector</a>
+											</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="portfolio-title">
+								<h4>
+									Kawasaki Accessory Selector
+									<br>
+									<a href="https://www.kawasaki.com/products/2019-MULE-PRO-MX-EPS-LE?cm_re=MPP-_-PRODUCTTRIMLIST-_-VEHICLEDETAILS#build-scroll">Live</a>
+								</h4>
+								<p>
+									SKETCH, HTML, CSS, JQUERY, JS (TYPESCRIPT), GSAP
+								</p>
+							</div>
+						</div>
 
 					<div class="portfolio-item cat1">
 						<div class="thumb">
 							<div class="portfolio-slider">
 								<ul class="slides">
-									<li>
 										<a href="assets/img/print/petvet/petvet_01.jpg" title="Pet Vet - Homepage">
 											<img src="assets/img/print/petvet/petvet_01_sm.jpg" alt="">
 										</a>
