fixed href on ax selector

--- a/index.html
+++ b/index.html
@@ -358,17 +358,17 @@
 									<ul class="slides">
 											
 										<li>
-											<a href="assets/img/print/kawi/kawi_01.jpg" title="Ax Selector - Landing">
+											<a href="assets/img/print/kawi/kawi_01.jpg" title="B&P - Landing">
 												<img src="assets/img/print/kawi/kawi_01_sm.jpg" alt="">
 											</a>
 										</li>
 										<li>
-												<a href="assets/img/print/kawi/kawi_02.jpg" title="Ax Selector - Survey">
+												<a href="assets/img/print/kawi/kawi_02.jpg" title="B&P - Survey">
 													<img src="assets/img/print/kawi/kawi_02_sm.jpg" alt="">
 												</a>
 											</li>
 											<li>
-													<a href="assets/img/print/kawi/kawi_03.jpg" title="Ax Selector - Send To Dealer">
+													<a href="assets/img/print/kawi/kawi_03.jpg" title="B&P - Send To Dealer">
 														<img src="assets/img/print/kawi/kawi_03_sm.jpg" alt="">
 													</a>
 												</li>
@@ -382,7 +382,7 @@
 										</a>
 										<div class="portfolio-description">
 											<h4>
-												<a href="#">Kawasaki Ax Selector</a>
+												<a href="#">Kawasaki - Build & Price</a>
 											</h4>
 										</div>
 									</div>
@@ -390,9 +390,9 @@
 							</div>
 							<div class="portfolio-title">
 								<h4>
-									Kawasaki Accessory Selector
+									Kawasaki - Build & Price
 									<br>
-									<a href="https://www.kawasaki.com/products/2019-MULE-PRO-MX-EPS-LE?cm_re=MPP-_-PRODUCTTRIMLIST-_-VEHICLEDETAILS#build-scroll">Live</a>
+									<a href="https://www.kawasaki.com/products/2019-MULE-PRO-MX-EPS-LE">Live</a>
 								</h4>
 								<p>
 									SKETCH, HTML, CSS, JQUERY, JS (TYPESCRIPT), GSAP
